--- a/public/accounting.html
+++ b/public/accounting.html
@@ -1,146 +1,78 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8" />
   <title>Accounting</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    body { font-family: system-ui, Arial, sans-serif; max-width: 900px; margin: 24px auto; padding: 0 16px; }
-    h1 { margin-bottom: 8px; }
-    section { border: 1px solid #ddd; border-radius: 8px; padding: 16px; margin: 16px 0; }
-    h2 { margin-top: 0; }
-    table { width:100%; border-collapse: collapse; margin-top: 12px; }
-    th, td { border:1px solid #eee; padding:8px; font-size:14px; text-align:left; }
-    th { background:#f9f9f9; }
-    .summary { font-size:16px; font-weight:600; }
-    .net { font-size:18px; font-weight:700; }
-    .ok { color:#137333; }
-    .bad { color:#b00020; }
+    body{font-family:system-ui,Arial,sans-serif;max-width:900px;margin:24px auto;padding:0 16px}
+    .card{border:1px solid #ddd;border-radius:10px;padding:12px;margin:12px 0}
+    .pill{display:inline-block;padding:4px 10px;border-radius:999px;border:1px solid #bbb;margin-right:8px}
+    label{display:inline-block;margin:6px 8px 6px 0}
+    input,button{padding:8px;margin:6px 4px}
   </style>
 </head>
 <body>
-  <div style="display:flex; justify-content:space-between; align-items:center;">
-    <h1>Accounting</h1>
-    <a href="index.html">← Back to Main Page</a>
+  <h1>Accounting</h1>
+  <p><a href="/index.html">Back to Main</a></p>
+
+  <div class="card">
+    <form id="range">
+      <label>From <input type="date" id="from"></label>
+      <label>To <input type="date" id="to"></label>
+      <button type="submit">Apply</button>
+      <button type="button" id="clear">Clear</button>
+    </form>
   </div>
 
-  <section>
-    <h2>Summary</h2>
-    <p class="summary">Total Income: <span id="totalIncome">$0.00</span></p>
-    <p class="summary">Total Expenses: <span id="totalExpenses">$0.00</span></p>
-    <p class="summary">Taxable Expenses: <span id="taxableExpenses">$0.00</span></p>
-    <p class="summary">Non-Taxable Expenses: <span id="nonTaxableExpenses">$0.00</span></p>
-    <p class="net">Net Balance: <span id="netBalance">$0.00</span></p>
-  </section>
-
-  <section>
+  <div class="card">
     <h2>Income (Payments)</h2>
-    <table id="paymentsTable">
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>Student</th>
-          <th>Date</th>
-          <th>Amount</th>
-          <th>Method</th>
-          <th>Taxable</th>
-          <th>Note</th>
-        </tr>
-      </thead>
-      <tbody><tr><td colspan="7">Loading…</td></tr></tbody>
-    </table>
-  </section>
+    <span class="pill">Taxable: $<b id="i_tax">0.00</b></span>
+    <span class="pill">Non-Taxable: $<b id="i_nontax">0.00</b></span>
+    <span class="pill">Total: $<b id="i_total">0.00</b></span>
+  </div>
 
-  <section>
+  <div class="card">
     <h2>Expenses</h2>
-    <table id="expensesTable">
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>Vendor</th>
-          <th>Date</th>
-          <th>Amount</th>
-          <th>Category</th>
-          <th>Taxable</th>
-          <th>Note</th>
-        </tr>
-      </thead>
-      <tbody><tr><td colspan="7">Loading…</td></tr></tbody>
-    </table>
-  </section>
+    <span class="pill">Taxable: $<b id="e_tax">0.00</b></span>
+    <span class="pill">Non-Taxable: $<b id="e_nontax">0.00</b></span>
+    <span class="pill">Total: $<b id="e_total">0.00</b></span>
+  </div>
+
+  <div class="card">
+    <h2>Net (Income − Expenses)</h2>
+    <span class="pill">Net Total: $<b id="net_total">0.00</b></span>
+  </div>
 
 <script>
-const fmt = (n)=>"$"+Number(n||0).toFixed(2);
+function $$(id){return document.getElementById(id)}
+function money(n){return (+n||0).toFixed(2)}
 
-async function loadAccounting(){
-  let totalIncome=0, totalExpenses=0, taxableExpenses=0, nonTaxableExpenses=0;
+async function load(){
+  const qs=new URLSearchParams();
+  const f=$$('from').value, t=$$('to').value;
+  if(f) qs.set('from',f); if(t) qs.set('to',t);
 
-  // Load payments
-  try{
-    const res=await fetch('/api/payments');
-    const payments=await res.json();
-    const tbody=document.querySelector('#paymentsTable tbody');
-    if(payments.length===0){tbody.innerHTML='<tr><td colspan="7">No payments yet.</td></tr>';}
-    else{
-      tbody.innerHTML='';
-      for(const p of payments){
-        totalIncome += Number(p.amount)||0;
-        const tr=document.createElement('tr');
-        tr.innerHTML=`
-          <td>${p.id}</td>
-          <td>${p.student_name||''}</td>
-          <td>${p.date||''}</td>
-          <td>${fmt(p.amount)}</td>
-          <td>${p.method||''}</td>
-          <td>${p.taxable?'Yes':'No'}</td>
-          <td>${p.note||''}</td>
-        `;
-        tbody.appendChild(tr);
-      }
-    }
-  }catch(e){console.error('Payments load failed',e);}
+  const [inc, exp, all] = await Promise.all([
+    fetch('/api/payments/summary'+(qs.toString()?('?'+qs.toString()):'')).then(r=>r.json()),
+    fetch('/api/expenses/summary'+(qs.toString()?('?'+qs.toString()):'')).then(r=>r.json()),
+    fetch('/api/accounting/summary'+(qs.toString()?('?'+qs.toString()):'')).then(r=>r.json())
+  ]);
 
-  // Load expenses
-  try{
-    const res=await fetch('/api/expenses');
-    const expenses=await res.json();
-    const tbody=document.querySelector('#expensesTable tbody');
-    if(expenses.length===0){tbody.innerHTML='<tr><td colspan="7">No expenses yet.</td></tr>';}
-    else{
-      tbody.innerHTML='';
-      for(const ex of expenses){
-        totalExpenses += Number(ex.amount)||0;
-        if(ex.taxable){ taxableExpenses += Number(ex.amount)||0; }
-        else{ nonTaxableExpenses += Number(ex.amount)||0; }
+  $$('i_tax').textContent = money(inc.taxable_total);
+  $$('i_nontax').textContent = money(inc.nontax_total);
+  $$('i_total').textContent = money(inc.grand_total);
 
-        const tr=document.createElement('tr');
-        tr.innerHTML=`
-          <td>${ex.id}</td>
-          <td>${ex.vendor||''}</td>
-          <td>${ex.date||''}</td>
-          <td>${fmt(ex.amount)}</td>
-          <td>${ex.category||''}</td>
-          <td>${ex.taxable?'Yes':'No'}</td>
-          <td>${ex.note||''}</td>
-        `;
-        tbody.appendChild(tr);
-      }
-    }
-  }catch(e){console.error('Expenses load failed',e);}
+  $$('e_tax').textContent = money(exp.taxable_total);
+  $$('e_nontax').textContent = money(exp.nontax_total);
+  $$('e_total').textContent = money(exp.grand_total);
 
-  // Update summary
-  document.getElementById('totalIncome').textContent=fmt(totalIncome);
-  document.getElementById('totalExpenses').textContent=fmt(totalExpenses);
-  document.getElementById('taxableExpenses').textContent=fmt(taxableExpenses);
-  document.getElementById('nonTaxableExpenses').textContent=fmt(nonTaxableExpenses);
-
-  const net=totalIncome-totalExpenses;
-  const netEl=document.getElementById('netBalance');
-  netEl.textContent=fmt(net);
-  netEl.className= net>=0 ? 'ok' : 'bad';
+  $$('net_total').textContent = money(all.net_total);
 }
 
-loadAccounting();
+document.getElementById('range').addEventListener('submit', (e)=>{e.preventDefault(); load();});
+document.getElementById('clear').addEventListener('click', ()=>{$$('from').value='';$$('to').value='';load();});
+load();
 </script>
 </body>
 </html>
